client/src/components/About/About.css
.about-section {
    display: flex;
    flex-direction: column;
    align-items: center; /* Center items horizontally */
    height: 100vh;
    /* Optionally, this can be adjusted based on your layout needs */
}

.about-text {
    text-align: center;
    margin-top: 100px;
}

.about-h1 {
    font-family: Vecna;
    font-size: 5rem;
    margin-bottom: 10px;
    color: aliceblue;
}

.about-p {
    font-size: 1.2em;
    font-family: RobotoRegular;
    line-height: 1.5;
    margin-bottom: 20px;
    color: #d7d5d5;
    max-width: 850px;
    margin-left: auto;
    margin-right: auto;
}

.about-card-holder{
    display: flex;
    margin-top: 30px;
}

.card-container {
    width: 15rem;
    border-radius: 1rem;
    box-shadow: 0 0.188em 1.55em rgb(100, 156, 156);
    display: flex;
    flex-direction: column;
    margin: 0.5rem;
    margin-left: 3rem; 
    margin-right: 3rem; 
    backdrop-filter: blur(5px);
    background-color: rgba(237, 214, 214, 0.5); 
    height: 500px;
}

.card-img {
    width: 100%;
    height: 350px; /* Set your desired fixed height */
    object-fit: cover; /* Maintain aspect ratio and cover the container */
    border-radius: 1rem 1rem 0 0;
}

.card-title{
    margin: 0.5rem auto;
    font-family: RobotoRegular;
    text-align: center;
    color: #fff;
}

.role{
    margin: 0.5rem auto;
    font-size: 1.2rem;
    font-family: RobotoRegular;
    text-align: center;
    color: #fff;
}

.card-description{
    font-family: RobotoRegular;
    color: #fff;
    text-align: center;
}

.team-h1 {
    margin-top: 50px;
    font-family: RobotoRegular;
    color: aliceblue;
    font-size: 2rem;
}

